<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_image"
            style="@style/myTextView"
            android:gravity="center"
            android:textSize="@dimen/_20ssp"
            android:layout_margin="@dimen/_10sdp"/>
        <ImageView
            android:id="@+id/edit_item_food_fragment_iv"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/ic_image"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edit_item_food_fragment_et_name"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape_ib"
            style="@style/myTextView"
            android:hint="@string/product_name"
            android:padding="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/edit_item_food_fragment_et_description"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape_ib"
            style="@style/myTextView"
            android:lines="3"
            android:hint="@string/product_description"
            android:padding="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/edit_item_food_fragment_et_price"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape_ib"
            style="@style/myTextView"
            android:hint="@string/price"
            android:padding="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/edit_item_food_fragment_et_price_offer"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape_ib"
            android:inputType="phone"
            style="@style/myTextView"
            android:hint="@string/price_offer"
            android:padding="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/edit_item_food_fragment_et_time"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape_ib"
            android:inputType="phone"
            style="@style/myTextView"
            android:hint="@string/preparing_time"
            android:padding="@dimen/_5sdp"/>
        <Button
            android:id="@+id/edit_item_food_fragment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_btn"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_margin="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/edit"/>

    </LinearLayout>
    </ScrollView>
</layout>