<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_margin="@dimen/_25sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/restaurant_info_fragment_tv_status"
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            style="@style/myTextView"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/colorText"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/restaurant_info_fragment_tv_city"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            style="@style/myTextView"/>
        <View
            android:layout_width="wrap_content"
            android:background="@color/colorText"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/restaurant_info_fragment_tv_region"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            style="@style/myTextView"/>
        <View
            android:layout_width="wrap_content"
            android:background="@color/colorText"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/restaurant_info_fragment_tv_minimum_charger"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_charger"
            style="@style/myTextView"/>
        <View
            android:layout_width="wrap_content"
            android:background="@color/colorText"
            android:layout_height="@dimen/_1sdp"/>
        <TextView
            android:id="@+id/restaurant_info_fragment_tv_delivery_cost"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_cost"
            style="@style/myTextView"/>

    </LinearLayout>
</layout>