<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_review_dialog_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_details"
            android:textColor="@color/albumColorPrimaryBlack"
            style="@style/myTextView"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_note">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/complete_order_fragment_et_note"
                    style="@style/myTextView"
                    android:lines="4"
                    android:maxLines="4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_shape_ib"
                    android:padding="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_location"
            style="@style/myTextView"
            android:textColor="@color/albumColorPrimaryBlack"
            android:layout_margin="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/complete_order_fragment_tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_location"
            style="@style/myTextView"
            android:textColor="@color/colorTextAccent"
            android:layout_margin="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payments"
            style="@style/myTextView"
            android:textColor="@color/albumColorPrimaryBlack"
            android:layout_margin="@dimen/_5sdp"/>
        <RadioGroup
            android:id="@+id/complete_order_fragment_radio_group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/complete_order_fragment_cb_cash"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cash"/>
            <RadioButton
                android:id="@+id/complete_order_fragment_cb_online"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/online"/>

        </RadioGroup>

        <TextView
            android:id="@+id/complete_order_fragment_tv_count"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            style="@style/myTextView"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/albumColorPrimaryBlack"
            />
        <TextView
            android:id="@+id/complete_order_fragment_tv_delivery_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_cost"
            style="@style/myTextView"
            android:textColor="@color/albumColorPrimaryBlack"
            android:layout_margin="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/complete_order_fragment_tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            style="@style/myTextView"
            android:textColor="@color/albumColorPrimaryBlack"
            android:layout_margin="@dimen/_5sdp"/>
        <Button
            android:id="@+id/complete_order_fragment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_btn"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:text="@string/order_now"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
</layout>