<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:gravity="center"
            style="@style/myTextView"
            android:textSize="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"/>

        <EditText
            android:id="@+id/change_password_fragment_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_text_5"
            style="@style/myTextView"
            android:layout_margin="@dimen/_20sdp"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:hint="@string/old_password"/>
        <EditText
            android:id="@+id/change_password_fragment_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_text_5"
            style="@style/myTextView"
            android:layout_margin="@dimen/_20sdp"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/change_password_fragment_pld_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_text_5"
            style="@style/myTextView"
            android:layout_margin="@dimen/_20sdp"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:hint="@string/password_confirm"/>
        <Button
            android:id="@+id/change_password_fragment_btn"
            style="@style/myAuthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/rectangle_btn"
            android:text="@string/change_password" />


    </LinearLayout>
</layout>