<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:gravity="center"
            style="@style/myTextView"
            android:textSize="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/more_fragment_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer"
            android:drawablePadding="@dimen/_7sdp"
            android:drawableStart="@drawable/gift"
            style="@style/myTextView"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_17sdp"
            android:layout_margin="@dimen/_5sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/colorTextAccent"/>
        <TextView
            android:id="@+id/more_fragment_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contact_us"
            android:drawableStart="@drawable/mail"
            android:textSize="@dimen/_17ssp"
            android:padding="@dimen/_10sdp"
            android:drawablePadding="@dimen/_7sdp"
            style="@style/myTextView"
            android:layout_margin="@dimen/_5sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/colorTextAccent"/>
        <TextView
            android:id="@+id/more_fragment_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/About"
            android:drawableStart="@drawable/lamp"
            android:textSize="@dimen/_17ssp"
            android:drawablePadding="@dimen/_7sdp"
            style="@style/myTextView"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/colorTextAccent"/>

        <TextView
            android:id="@+id/more_fragment_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:drawableStart="@drawable/password"
            android:textSize="@dimen/_17ssp"
            android:drawablePadding="@dimen/_7sdp"
            style="@style/myTextView"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@color/colorTextAccent"/>
        <TextView
            android:id="@+id/more_fragment_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_7sdp"
            android:text="@string/logout"
            android:drawableStart="@drawable/logout"
            android:textSize="@dimen/_17ssp"
            style="@style/myTextView"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_5sdp"/>

    </LinearLayout>
</layout>